--- a/strayhero/src/app/components/cadastro-form/cadastro-form.component.html
+++ b/strayhero/src/app/components/cadastro-form/cadastro-form.component.html
@@ -12,6 +12,6 @@
   <label class="form__label" for="">Repita a Senha</label><br>
   <input class="form__input" type="password" placeholder="Repita a senha" #pass2><br>
   <span class="form__feedback {{st_senha2}}">{{fb_senha2}}<br></span>
-  <button class="botao__primario mr-10 mt-10" (click)="enviar(criarObj(email.value, username.value, pass1.value, pass2.value)); $event.preventDefault()">ENVIAR</button>
+  <button class="botao__primario mr-10 mt-10" (click)="enviar(criarObj(email.value, username.value, pass1.value, pass2.value)); $event.preventDefault()">CADASTRAR</button>
   <button class="botao__secundario mt-10">CANCELAR</button>
 </form>
