--- a/strayhero/src/app/components/cadastro-form/cadastro-form.component.scss
+++ b/strayhero/src/app/components/cadastro-form/cadastro-form.component.scss
@@ -1,23 +1,23 @@
 .form{
-    width: 400px;
+    width: 330px;
     height: 400px;
     background-color: rgb(243, 243, 243);
     border: 2px solid transparent;
-    border-radius: 30px 40px 40px 50px;
+    border-radius: 50px 25px 40px 50px;
     text-align: center;
 }
 
 .form__title{
-    width: 400px;
-    height: 40px;
+    width: 100%;
     background-color: rgb(70, 70, 70);
     border: 2px solid transparent;
-    border-radius: 30px 40px 0px 0px;
+    border-radius: 50px 25px 45px 25px;
     text-align: center;
     font-family: Boogaloo;
     font-size: 30px;
     color: white;
     padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .form__label{
