tela de cadastro sem verificacoes

--- a/strayhero/src/app/app.component.html
+++ b/strayhero/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-cadastro-form></app-cadastro-form>
+<div class="background">
+    <div class="container">
+        <app-caixa-dialogo1></app-caixa-dialogo1>
+        <app-cadastro-form></app-cadastro-form>
+    </div>
+</div>
