--- a/strayhero/src/styles.scss
+++ b/strayhero/src/styles.scss
@@ -33,14 +33,22 @@
   margin-right: 10px;
 }
 
-.mt-10{
-  margin-top: 10px;
+.mt-20{
+  margin-top: 20px;
+}
+
+.mb-20{
+  margin-bottom: 20px;
+}
+
+.ml-10{
+  margin-left: 10px;
 }
 
 .botao__primario{
   border: 2px solid transparent;
   border-radius: 15px 10px 20px 15px;
-  background-color: rgb(70, 70, 70);
+  background-color: #1759b1;
   padding: 5px 20px;
   color: white;
   font-family: Boogaloo;
