--- a/strayhero/src/app/components/caixa-dialogo1/caixa-dialogo1.component.html
+++ b/strayhero/src/app/components/caixa-dialogo1/caixa-dialogo1.component.html
@@ -1,3 +1,6 @@
-<p>
-  caixa-dialogo1 works!
-</p>
+<div class="dialogo1">
+  <img src="../../../assets/cachorro1.png" alt="Cachorrinho feliz com fundo rosa." class="dialogo1__img">
+  <div class="dialogo1__textcontainer">
+    <p class="dialogo1__textcontainer__text">"Que bom que você<br>vai me adotar!"</p>
+  </div>
+</div>
