--- a/strayhero/src/app/components/cadastro-form/cadastro-form.component.scss
+++ b/strayhero/src/app/components/cadastro-form/cadastro-form.component.scss
@@ -1,3 +1,41 @@
+@keyframes animacao-foco{
+    0% {
+        border: 2px solid rgb(41, 41, 41);
+        box-shadow: 0px 3px rgb(41, 41, 41);
+    }
+    80% {
+        border: 2px solid rgb(41, 41, 41);
+        box-shadow: 0px 3px rgb(41, 41, 41);
+    }
+    90% {
+        border: 2px solid rgb(41, 41, 41);
+        box-shadow: 1px 3px rgb(41, 41, 41);
+    }
+    100% {
+        border: 2px solid rgb(70, 70, 70);
+        box-shadow: 0px 3px rgb(41, 41, 41);
+    }
+}
+
+@keyframes animacao-foco-erro{
+    0% {
+        border: 2px solid red; /* Rever cor de erro */
+        box-shadow: 0px 3px red;
+    }
+    80% {
+        border: 2px solid red;
+        box-shadow: 0px 3px red;
+    }
+    90% {
+        border: 2px solid red;
+        box-shadow: 1px 3px red;
+    }
+    100% {
+        border: 2px solid red;
+        box-shadow: 0px 3px red;
+    }
+}
+
 .form{
     width: 330px;
     background-color: #f2f2f2;
@@ -16,6 +54,10 @@
         font-size: 20px;
         padding-top: 5px;
         padding-left: 10px;
+    }
+
+    .form__input:focus{
+        animation: animacao-foco 2s infinite;
     }
 }
 
