--- a/strayhero/src/app/app.component.html
+++ b/strayhero/src/app/app.component.html
@@ -1,6 +1,8 @@
-<div class="background">
+<!-- <div class="background">
     <div class="container">
         <app-caixa-dialogo1></app-caixa-dialogo1>
         <app-cadastro-form></app-cadastro-form>
     </div>
-</div>
+</div> -->
+
+<app-barra-equilibrio></app-barra-equilibrio>
