--- a/strayhero/src/app/components/barra-equilibrio/barra-equilibrio.component.scss
+++ b/strayhero/src/app/components/barra-equilibrio/barra-equilibrio.component.scss
@@ -38,7 +38,7 @@ $larguraFonte: 12px;
         }
     }
     .containerBarra{
-        position: absolute;
+        position: relative;
         top: 10px;
         z-index: -1;
         .barra {
