Telas principal(animais) e de login adicionadas

--- a/strayhero/src/app/app.component.html
+++ b/strayhero/src/app/app.component.html
@@ -1,8 +1,5 @@
-<!-- <div class="background">
-    <div class="container">
-        <app-caixa-dialogo1></app-caixa-dialogo1>
-        <app-cadastro-form></app-cadastro-form>
-    </div>
-</div> -->
+<!-- <app-tela-cadastro></app-tela-cadastro> -->
 
-<app-barra-equilibrio></app-barra-equilibrio>
+<app-tela-login></app-tela-login>
+
+<!-- <app-tela-animais></app-tela-animais> -->
