--- a/strayhero/src/app/components/barra-equilibrio/barra-equilibrio.component.html
+++ b/strayhero/src/app/components/barra-equilibrio/barra-equilibrio.component.html
@@ -1,20 +1,31 @@
 <div class="container">
 
-  <div class="recursos">
-      <img src="../../../assets/preto.png">
-      <div class="nome">Recursos</div>
+  <div class="container__recursos">
+      <img src="../../../assets/recurso.png">
+      <div class="container__recursos__nome">Recursos</div>
   </div>
 
-  <div class="containerBarra">
-    <div class="barra">
-      <div class="indicador"></div>
+  <div class="container__containerbarra">
+    <div class="container__containerbarra__vermenho">
+      <div class="container__containerbarra__vermenho__amarelo">
+        <div class= "container__containerbarra__vermenho__amarelo__verde">
+            
+        </div>
+      </div>
+      <div class="container__containerbarra__indicador"></div>
     </div>
+
+    
+
+    <!-- <div class="barra">
+      <div class="indicador"></div>
+    </div> -->
   </div>
   
 
-  <div class="cuidados">
-    <img src="../../../assets/preto.png">
-    <div class="nome">Cuidados</div>
+  <div class="container__cuidados">
+    <img src="../../../assets/população.png">
+    <div class="container__cuidados__nome">Cuidados</div>
   </div>
 
 </div>
