Correções na tela principal (animais)

--- a/strayhero/src/app/app.component.html
+++ b/strayhero/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-tela-cadastro></app-tela-cadastro> -->
 
-<app-tela-login></app-tela-login>
+<!-- <app-tela-login></app-tela-login> -->
 
-<!-- <app-tela-animais></app-tela-animais> -->
+<app-tela-animais></app-tela-animais>
