--- a/strayhero/src/app/components/ambiente/ambiente.component.html
+++ b/strayhero/src/app/components/ambiente/ambiente.component.html
@@ -1,1 +1,76 @@
-<img src="../../../assets/cenarios/cenario parque.png" alt="">
+<app-background></app-background>
+
+<table class="tabela">
+    <tr class="tabela__linha" id="1">
+        <th class="tabela__linha__coluna" id="1__1" > </th>
+        <th class="tabela__linha__coluna" id="1__2" > </th>
+        <th class="tabela__linha__coluna" id="1__3" > </th>
+        <th class="tabela__linha__coluna" id="1__4" > </th>
+        <th class="tabela__linha__coluna" id="1__5" > </th>
+    </tr>
+    <tr class="tabela__linha" id="2">
+        <th class="tabela__linha__coluna" id="2__1" > </th>
+        <th class="tabela__linha__coluna" id="2__2" > </th>
+        <th class="tabela__linha__coluna" id="2__3" > </th>
+        <th class="tabela__linha__coluna" id="2__4" > </th>
+        <th class="tabela__linha__coluna" id="2__5" > </th>
+    </tr>
+    <tr class="tabela__linha" id="3">
+        <th class="tabela__linha__coluna" id="3__1" > </th>
+        <th class="tabela__linha__coluna" id="3__2" > <img src="../../../assets/pets/gato-preto-assustado.png"> </th>
+        <th class="tabela__linha__coluna" id="3__3" > </th>
+        <th class="tabela__linha__coluna" id="3__4" > </th>
+        <th class="tabela__linha__coluna" id="3__5" > </th>
+    </tr>
+    <tr class="tabela__linha" id="4">
+        <th class="tabela__linha__coluna" id="4__1" > </th>
+        <th class="tabela__linha__coluna" id="4__2" > </th>
+        <th class="tabela__linha__coluna" id="4__3" > </th>
+        <th class="tabela__linha__coluna" id="4__4" > </th>
+        <th class="tabela__linha__coluna" id="4__5" > </th>
+    </tr>
+    <tr class="tabela__linha" id="5">
+        <th class="tabela__linha__coluna" id="5__1" > </th>
+        <th class="tabela__linha__coluna" id="5__2" > </th>
+        <th class="tabela__linha__coluna" id="5__3" > <img src="../../../assets/pets/gato-gordo-feliz.png"> </th>
+        <th class="tabela__linha__coluna" id="5__4" > </th>
+        <th class="tabela__linha__coluna" id="5__5" > </th>
+    </tr>
+    <tr class="tabela__linha" id="6">
+        <th class="tabela__linha__coluna" id="6__1" > </th>
+        <th class="tabela__linha__coluna" id="6__2" > </th>
+        <th class="tabela__linha__coluna" id="6__3" > </th>
+        <th class="tabela__linha__coluna" id="6__4" > </th>
+        <th class="tabela__linha__coluna" id="6__5" > </th>
+    </tr>
+    <tr class="tabela__linha" id="7">
+        <th class="tabela__linha__coluna" id="7__1" > </th>
+        <th class="tabela__linha__coluna" id="7__2" > <img src="../../../assets/pets/gato-marrom-triste.png"> </th>
+        <th class="tabela__linha__coluna" id="7__3" > </th>
+        <th class="tabela__linha__coluna" id="7__4" > </th>
+        <th class="tabela__linha__coluna" id="7__5" > </th>
+    </tr>
+    <tr class="tabela__linha" id="8">
+        <th class="tabela__linha__coluna" id="8__1" > </th>
+        <th class="tabela__linha__coluna" id="8__2" > </th>
+        <th class="tabela__linha__coluna" id="8__3" > </th>
+        <th class="tabela__linha__coluna" id="8__4" > </th>
+        <th class="tabela__linha__coluna" id="8__5" > </th>
+    </tr>
+    <tr class="tabela__linha" id="9">
+        <th class="tabela__linha__coluna" id="9__1" > </th>
+        <th class="tabela__linha__coluna" id="9__2" > </th>
+        <th class="tabela__linha__coluna" id="9__3" > </th>
+        <th class="tabela__linha__coluna" id="9__4" > <img src="../../../assets/pets/dog-cinza-feliz.png"> </th>
+        <th class="tabela__linha__coluna" id="9__5" > </th>
+    </tr>
+    <tr class="tabela__linha" id="10">
+        <th class="tabela__linha__coluna" id="10__1" > </th>
+        <th class="tabela__linha__coluna" id="10__2" > </th>
+        <th class="tabela__linha__coluna" id="10__3" > </th>
+        <th class="tabela__linha__coluna" id="10__4" > </th>
+        <th class="tabela__linha__coluna" id="10__5" > </th>
+    </tr>
+    
+    
+</table>
