--- a/strayhero/src/app/components/ambiente/ambiente.component.scss
+++ b/strayhero/src/app/components/ambiente/ambiente.component.scss
@@ -1,5 +1,24 @@
-img{
-    z-index: 1;
+.tabela{
+    // border: 2px solid black;
+    position: absolute;
     width: 360px;
-    height: 640px;
+    height: 590px;
+
+    .tabela__linha{
+        // border: 2px solid black;
+        
+        .tabela__linha__coluna{
+            // border: 2px solid black;
+            width: 72px;
+            height: 52px;
+
+            img{
+                max-height: 50px;
+                max-width: 50px;
+            }
+
+
+        }
+    }
 }
+
