--- a/strayhero/src/app/components/progresso-usuario/progresso-usuario.component.html
+++ b/strayhero/src/app/components/progresso-usuario/progresso-usuario.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <img src="../../../assets/Escudo lapis.png">
+    <img src="../../../assets/escudo.png">
     <div class="container__nivel">Aprendiz</div>
     <div class="container__barra">
       <div class="container__barra__indicador"></div>
