Alterações na proporção da tabela e do background da tela principal (animais)

--- a/strayhero/src/app/components/background/background.component.scss
+++ b/strayhero/src/app/components/background/background.component.scss
@@ -1,7 +1,7 @@
 img{
     z-index: 1;
-    width: 360px;
-    height: 640px;
+    width: 100vw;
+    height: 100vh;
     position: absolute;
     z-index: -1;
 }
