--- a/strayhero/src/app/components/ambiente/ambiente.component.scss
+++ b/strayhero/src/app/components/ambiente/ambiente.component.scss
@@ -1,14 +1,16 @@
 .tabela{
-    // border: 2px solid black;
+    border: 2px solid black;
     position: absolute;
-    width: 360px;
-    height: 590px;
+    // width: 360px;
+    // height: 590px;
+    width: 100vw;
+    height: 92vh;
 
     .tabela__linha{
-        // border: 2px solid black;
+        border: 2px solid black;
         
         .tabela__linha__coluna{
-            // border: 2px solid black;
+            border: 2px solid black;
             width: 72px;
             height: 52px;
 
