Alterações na proporção da tabela e do background da tela principal (animais)

--- a/strayhero/src/app/components/anuncio/anuncio.component.scss
+++ b/strayhero/src/app/components/anuncio/anuncio.component.scss
@@ -3,7 +3,7 @@
     width: 98vw;
     height: 40px;
     margin: 0 auto;
-    position: absolute;
+    position: fixed;
     bottom: 5px;
     left: 1vw;
     background-color: rgba(16, 14, 16, 0.2);
