--- a/strayhero/src/app/components/botoes-principal/botoes-principal.component.scss
+++ b/strayhero/src/app/components/botoes-principal/botoes-principal.component.scss
@@ -11,7 +11,7 @@ $larguraFonte: 12px;
     z-index: +1;
     width: 90vw;
     margin: 0 auto;
-    position: absolute;
+    position: fixed;
     bottom: 50px;
     left: 5vw;
     display: flex;
