começo da estruturacao das rotas

--- a/strayhero/src/app/app.component.html
+++ b/strayhero/src/app/app.component.html
@@ -2,4 +2,6 @@
 
 <!-- <app-tela-login></app-tela-login> -->
 
-<app-tela-animais></app-tela-animais>
+<!-- <app-tela-animais></app-tela-animais> -->
+
+<router-outlet></router-outlet>
