Adicionados compoentes de notificação e feedback da tela inicial, resolvido o bug do tamanho da tabela

--- a/strayhero/src/app/components/ambiente/ambiente.component.scss
+++ b/strayhero/src/app/components/ambiente/ambiente.component.scss
@@ -1,22 +1,25 @@
 .tabela{
-    border: 2px solid black;
-    position: absolute;
-    // width: 360px;
-    // height: 590px;
-    width: 100vw;
-    height: 92vh;
+    border: 1px solid black;
+    position: fixed;
+
+    // min-width: 100%;
+    max-height: 100%;
 
     .tabela__linha{
-        border: 2px solid black;
+        border: 1px solid black;
+        height: 14vh;
+        
         
         .tabela__linha__coluna{
-            border: 2px solid black;
-            width: 72px;
-            height: 52px;
+            border: 1px solid black;
+            width: 100vw;
+            height: 14vh;
 
             img{
-                max-height: 50px;
-                max-width: 50px;
+                max-width: 74%;
+                max-height: 50%;
+                position: relative;
+                bottom:  -10px;
             }
 
 
