--- a/strayhero/src/app/components/notificacao/notificacao.component.html
+++ b/strayhero/src/app/components/notificacao/notificacao.component.html
@@ -1,3 +1,16 @@
-<p>
-  notificacao works!
-</p>
+<div class="container">
+  <div class="container__modal">
+    <div class="container__modal__titulo">
+      <span class="container__modal__titulo__texto">TITULO</span>
+    </div>
+    <div class="container__modal__corpo">
+      <span class="container__modal__corpo__texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis at, beatae fugiat laborum,
+         nemo necessitatibus mollitia, in reiciendis unde dolor aut sapiente rem laboriosam. Dignissimos est id illum quod impedit!
+         nemo necessitatibus mollitia, in reiciendis unde dolor aut sapiente rem laboriosam. Dignissimos est id illum quod impedit!</span>
+    </div>
+    <div class="container__modal__botoes">
+      <button class="container__modal__botoes__ok"> OK </button>
+      <button class="container__modal__botoes__cancelar"> CANCELAR </button>
+    </div>
+  </div>
+</div>
