--- a/strayhero/src/app/components/tela-animais/tela-animais.component.html
+++ b/strayhero/src/app/components/tela-animais/tela-animais.component.html
@@ -2,6 +2,8 @@
 
 <app-progresso-usuario></app-progresso-usuario>
 
+<app-feedback-acao-usuario></app-feedback-acao-usuario>
+
 <app-moedas></app-moedas>
 
 <app-botoes-principal></app-botoes-principal>
@@ -10,5 +12,4 @@
 
 <app-ambiente></app-ambiente>
 
-<!-- <app-background></app-background> -->
-
+<app-notificacao></app-notificacao>
