--- a/strayhero/src/app/components/ambiente/ambiente.component.html
+++ b/strayhero/src/app/components/ambiente/ambiente.component.html
@@ -9,48 +9,48 @@
         <th class="tabela__linha__coluna" id="1__5" > </th>
     </tr>
     <tr class="tabela__linha" id="2">
-        <th class="tabela__linha__coluna" id="2__1" > </th>
-        <th class="tabela__linha__coluna" id="2__2" > </th>
-        <th class="tabela__linha__coluna" id="2__3" > </th>
-        <th class="tabela__linha__coluna" id="2__4" > </th>
-        <th class="tabela__linha__coluna" id="2__5" > </th>
+        <th class="tabela__linha__coluna" id="2__1" >    </th>
+        <th class="tabela__linha__coluna" id="2__2" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/dog-peludo-feliz.png">  </th>
+        <th class="tabela__linha__coluna" id="2__3" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/dog-feliz.png">         </th>
+        <th class="tabela__linha__coluna" id="2__4" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/gato-gordo-feliz.png">  </th>
+        <th class="tabela__linha__coluna" id="2__5" >  </th>
     </tr>
     <tr class="tabela__linha" id="3">
-        <th class="tabela__linha__coluna" id="3__1" > </th>
-        <th class="tabela__linha__coluna" id="3__2" > <img src="../../../assets/pets/gato-preto-assustado.png"> </th>
-        <th class="tabela__linha__coluna" id="3__3" > </th>
-        <th class="tabela__linha__coluna" id="3__4" > </th>
-        <th class="tabela__linha__coluna" id="3__5" > </th>
+        <th class="tabela__linha__coluna" id="3__1" >    </th>
+        <th class="tabela__linha__coluna" id="3__2" >   </th>
+        <th class="tabela__linha__coluna" id="3__3" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/dog-feliz.png">         </th>
+        <th class="tabela__linha__coluna" id="3__4" >   </th>
+        <th class="tabela__linha__coluna" id="3__5" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/gato-marrom-feliz.png"> </th>
     </tr>
     <tr class="tabela__linha" id="4">
-        <th class="tabela__linha__coluna" id="4__1" > </th>
-        <th class="tabela__linha__coluna" id="4__2" > </th>
-        <th class="tabela__linha__coluna" id="4__3" > </th>
-        <th class="tabela__linha__coluna" id="4__4" > </th>
-        <th class="tabela__linha__coluna" id="4__5" > </th>
+        <th class="tabela__linha__coluna" id="4__1" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/dog-cinza-feliz.png">   </th>
+        <th class="tabela__linha__coluna" id="4__2" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/dog-peludo-feliz.png">  </th>
+        <th class="tabela__linha__coluna" id="4__3" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/dog-feliz.png">         </th>
+        <th class="tabela__linha__coluna" id="4__4" >   </th>
+        <th class="tabela__linha__coluna" id="4__5" >  </th>
     </tr>
     <tr class="tabela__linha" id="5">
-        <th class="tabela__linha__coluna" id="5__1" > </th>
-        <th class="tabela__linha__coluna" id="5__2" > </th>
-        <th class="tabela__linha__coluna" id="5__3" > <img src="../../../assets/pets/gato-gordo-feliz.png"> </th>
-        <th class="tabela__linha__coluna" id="5__4" > </th>
-        <th class="tabela__linha__coluna" id="5__5" > </th>
+        <th class="tabela__linha__coluna" id="5__1" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/dog-cinza-feliz.png">   </th>
+        <th class="tabela__linha__coluna" id="5__2" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/dog-peludo-feliz.png">  </th>
+        <th class="tabela__linha__coluna" id="5__3" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/dog-feliz.png">         </th>
+        <th class="tabela__linha__coluna" id="5__4" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/gato-gordo-feliz.png">  </th>
+        <th class="tabela__linha__coluna" id="5__5" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/gato-marrom-feliz.png"> </th>
     </tr>
     <tr class="tabela__linha" id="6">
-        <th class="tabela__linha__coluna" id="6__1" > </th>
-        <th class="tabela__linha__coluna" id="6__2" > </th>
-        <th class="tabela__linha__coluna" id="6__3" > </th>
-        <th class="tabela__linha__coluna" id="6__4" > </th>
-        <th class="tabela__linha__coluna" id="6__5" > </th>
+        <th class="tabela__linha__coluna" id="6__1" >    </th>
+        <th class="tabela__linha__coluna" id="6__2" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/dog-peludo-feliz.png">  </th>
+        <th class="tabela__linha__coluna" id="6__3" >          </th>
+        <th class="tabela__linha__coluna" id="6__4" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/gato-gordo-feliz.png">  </th>
+        <th class="tabela__linha__coluna" id="6__5" >  </th>
     </tr>
-    <tr class="tabela__linha" id="7">
-        <th class="tabela__linha__coluna" id="7__1" > </th>
-        <th class="tabela__linha__coluna" id="7__2" > <img src="../../../assets/pets/gato-marrom-triste.png"> </th>
-        <th class="tabela__linha__coluna" id="7__3" > </th>
-        <th class="tabela__linha__coluna" id="7__4" > </th>
-        <th class="tabela__linha__coluna" id="7__5" > </th>
+    <!-- <tr class="tabela__linha" id="7">
+        <th class="tabela__linha__coluna" id="7__1" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/gato-preto-assustado.png"> </th>
+        <th class="tabela__linha__coluna" id="7__2" >  <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/gato-marrom-triste.png"> </th>
+        <th class="tabela__linha__coluna" id="7__3" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/gato-preto-assustado.png"> </th>
+        <th class="tabela__linha__coluna" id="7__4" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/gato-preto-assustado.png"></th>
+        <th class="tabela__linha__coluna" id="7__5" > <app-feedback-atencao-animal></app-feedback-atencao-animal> <img src="../../../assets/pets/gato-preto-assustado.png"> </th>
     </tr>
-    <tr class="tabela__linha" id="8">
+     <tr class="tabela__linha" id="8">
         <th class="tabela__linha__coluna" id="8__1" > </th>
         <th class="tabela__linha__coluna" id="8__2" > </th>
         <th class="tabela__linha__coluna" id="8__3" > </th>
@@ -63,7 +63,7 @@
         <th class="tabela__linha__coluna" id="9__3" > </th>
         <th class="tabela__linha__coluna" id="9__4" > <img src="../../../assets/pets/dog-cinza-feliz.png"> </th>
         <th class="tabela__linha__coluna" id="9__5" > </th>
-    </tr>
+    </tr> -->
     
     
 </table>
