--- a/strayhero/src/app/components/moedas/moedas.component.scss
+++ b/strayhero/src/app/components/moedas/moedas.component.scss
@@ -10,7 +10,7 @@ $larguraProgresso: 75;
 .container{
     position: absolute;
     right: 115px;
-    top: 10px;
+    top: 15px;
     img{
         z-index: +1;
         position: absolute;
@@ -21,11 +21,10 @@ $larguraProgresso: 75;
     .container__dinheiro{
         right: -76px;
         top: 60px;
-        // left: 30px;
         position: absolute;
         padding: 0 26px 2px 10px;
         border-radius: 15px 10px 10px 5px;
-        max-width: 40px;
+        width: 40px;
         height: 15px;
         background-color: $amarelo;
         text-align: center;
