--- a/strayhero/src/styles.scss
+++ b/strayhero/src/styles.scss
@@ -54,6 +54,7 @@
   font-family: Boogaloo;
   font-size: 20px;
   cursor: pointer;
+  outline:0;
 }
 
 .botao__secundario{
@@ -65,6 +66,7 @@
   font-family: Boogaloo;
   font-size: 20px;
   cursor: pointer;
+  outline:0;
 }
 
 // body{
