--- a/strayhero/src/app/components/login-form/login-form.component.scss
+++ b/strayhero/src/app/components/login-form/login-form.component.scss
@@ -54,6 +54,7 @@
         font-size: 20px;
         padding-top: 5px;
         padding-left: 10px;
+        outline:0;
     }
 
     .form__input:focus{
