--- a/strayhero/src/app/components/notificacao/notificacao.component.scss
+++ b/strayhero/src/app/components/notificacao/notificacao.component.scss
@@ -80,6 +80,7 @@ $pretoTraparente: rgba(0, 0, 0, 0.575);
                 font-size: 20px;
                 cursor: pointer;
                 margin: 10px;
+                outline:0;
             }
 
             .container__modal__botoes__cancelar{
@@ -94,6 +95,7 @@ $pretoTraparente: rgba(0, 0, 0, 0.575);
                 font-size: 20px;
                 cursor: pointer;
                 margin: 10px;
+                outline:0;
             }
 
 
