--- a/strayhero/src/app/components/tela-login/tela-login.component.html
+++ b/strayhero/src/app/components/tela-login/tela-login.component.html
@@ -1,5 +1,6 @@
 <div class="background">
   <div class="container">
+    <div class="gambiarra"></div>
     <app-caixa-dialogo2></app-caixa-dialogo2>
     <app-login-form></app-login-form>
     <!-- <app-cadastro-form></app-cadastro-form> -->
