integracao tela login

--- a/strayhero/src/app/components/cadastro-form/cadastro-form.component.html
+++ b/strayhero/src/app/components/cadastro-form/cadastro-form.component.html
@@ -12,3 +12,4 @@
   <!-- [routerLink]="['/login']" routerLinkActive="router-link-active" -->  <!-- ALTERAR ISSO AQUI DEPOIS -->
   <button class="botao__secundario mt-20 mb-20" >CANCELAR</button>
 </form>
+<a [routerLink]="['/login']" routerLinkActive="router-link-active" >Já sou cadastrado!</a>
