--- a/strayhero/src/app/components/login-form/login-form.component.html
+++ b/strayhero/src/app/components/login-form/login-form.component.html
@@ -1,9 +1,9 @@
 <form class="form">
   <h3 class="form__title">LOGIN</h3>
   <div class="form__label">Email</div><br>
-  <input class="form__input" type="email" placeholder="email@email.com" #email><br>
+  <input class="form__input {{cl_email}}" type="email" placeholder="email@email.com" value="{{v_email}}" (focus)="cl_email = ''" #email><br>
   <div class="form__label">Senha</div><br>
-  <input class="form__input" type="password" placeholder="Digite a senha" #pass1><br>
-  <button class="botao__primario mr-10 mt-20 mb-20" (click)="enviar(); $event.preventDefault()">ENTRAR</button>
+  <input class="form__input {{cl_pass}}" type="password" placeholder="Digite a senha" value="{{v_pass}}" (focus)="cl_pass = ''" #pass><br>
+  <button class="botao__primario mr-10 mt-20 mb-20" (click)="enviar(email.value,pass.value); $event.preventDefault()">ENTRAR</button>
   <button class="botao__secundario mt-20 mb-20">CANCELAR</button>
 </form>
