--- a/strayhero/src/app/components/login-form/login-form.component.scss
+++ b/strayhero/src/app/components/login-form/login-form.component.scss
@@ -60,6 +60,10 @@
     .form__input:focus{
         animation: animacao-foco 2s infinite;
     }
+
+    .erro{
+        animation: animacao-foco-erro 2s infinite;
+    }
 }
 
 .form__title{
